// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`FeaturesGrid > snapshots > matches snapshot - 3 features 1`] = `
"<!--
    ┌─────────────────────────────────────────────────────────────┐
    │                      FEATURES GRID                          │
    │  ┌───────────────────────────────────────────────────────┐  │
    │  │  section (py-16, bg-[var(--bg-subtle)])               │  │
    │  │  ┌─────────────────────────────────────────────────┐  │  │
    │  │  │  LayoutContainer size="xl"                      │  │  │
    │  │  │                                                 │  │  │
    │  │  │  ┌───────────────────────────────────────────┐  │  │  │
    │  │  │  │  Header (text-center, mb-12)              │  │  │  │
    │  │  │  │    <h2>{{ title }}</h2>                   │  │  │  │
    │  │  │  │    <p>{{ subtitle }}</p>                  │  │  │  │
    │  │  │  └───────────────────────────────────────────┘  │  │  │
    │  │  │                                                 │  │  │
    │  │  │  ┌───────────────────────────────────────────┐  │  │  │
    │  │  │  │  LayoutGrid :cols="cols" gap="lg"        │  │  │  │
    │  │  │  │  ┌─────────┬─────────┬─────────┐         │  │  │  │
    │  │  │  │  │  Card   │  Card   │  Card   │         │  │  │  │
    │  │  │  │  │  ┌───┐  │  ┌───┐  │  ┌───┐  │         │  │  │  │
    │  │  │  │  │  │ 🎨│  │  │ ⚡│  │  │ 🔧│  │  icons  │  │  │  │
    │  │  │  │  │  └───┘  │  └───┘  │  └───┘  │         │  │  │  │
    │  │  │  │  │  Title  │  Title  │  Title  │         │  │  │  │
    │  │  │  │  │  Desc   │  Desc   │  Desc   │         │  │  │  │
    │  │  │  │  ├─────────┼─────────┼─────────┤         │  │  │  │
    │  │  │  │  │  Card   │  Card   │  Card   │         │  │  │  │
    │  │  │  │  └─────────┴─────────┴─────────┘         │  │  │  │
    │  │  │  └───────────────────────────────────────────┘  │  │  │
    │  │  │                                                 │  │  │
    │  │  └─────────────────────────────────────────────────┘  │  │
    │  └───────────────────────────────────────────────────────┘  │
    │                                                             │
    │  Props:                                                     │
    │    • title: string (requis) - Titre principal               │
    │    • subtitle: string - Sous-titre optionnel                │
    │    • features: Feature[] (requis) - Liste des features      │
    │    • cols: 2 | 3 | 4 (défaut: 3) - Colonnes desktop         │
    │                                                             │
    │  Interface Feature:                                         │
    │    { icon: string, title: string, description: string }     │
    │                                                             │
    │  Events: Aucun (présentation pure)                          │
    │                                                             │
    │  Slots: Aucun (données via props)                           │
    │                                                             │
    │  Responsive: sm=1col → md=2cols → lg=cols                   │
    └─────────────────────────────────────────────────────────────┘
  -->
<section class="py-16 bg-[var(--bg-subtle)]">
  <div class="layout-container">
    <!-- Header -->
    <div class="mb-12">
      <h2 class="heading mb-4">Features</h2>
      <!--v-if-->
    </div><!-- Features Grid -->
    <div class="layout-grid">
      <div class="card"><span class="card__icon">🚀</span><span class="card__title">Fast</span><span class="card__description">Lightning fast performance</span></div>
      <div class="card"><span class="card__icon">🔒</span><span class="card__title">Secure</span><span class="card__description">Enterprise-grade security</span></div>
      <div class="card"><span class="card__icon">📱</span><span class="card__title">Responsive</span><span class="card__description">Works on all devices</span></div>
    </div>
  </div>
</section>"
`;

exports[`FeaturesGrid > snapshots > matches snapshot - with subtitle and 4 cols 1`] = `
"<!--
    ┌─────────────────────────────────────────────────────────────┐
    │                      FEATURES GRID                          │
    │  ┌───────────────────────────────────────────────────────┐  │
    │  │  section (py-16, bg-[var(--bg-subtle)])               │  │
    │  │  ┌─────────────────────────────────────────────────┐  │  │
    │  │  │  LayoutContainer size="xl"                      │  │  │
    │  │  │                                                 │  │  │
    │  │  │  ┌───────────────────────────────────────────┐  │  │  │
    │  │  │  │  Header (text-center, mb-12)              │  │  │  │
    │  │  │  │    <h2>{{ title }}</h2>                   │  │  │  │
    │  │  │  │    <p>{{ subtitle }}</p>                  │  │  │  │
    │  │  │  └───────────────────────────────────────────┘  │  │  │
    │  │  │                                                 │  │  │
    │  │  │  ┌───────────────────────────────────────────┐  │  │  │
    │  │  │  │  LayoutGrid :cols="cols" gap="lg"        │  │  │  │
    │  │  │  │  ┌─────────┬─────────┬─────────┐         │  │  │  │
    │  │  │  │  │  Card   │  Card   │  Card   │         │  │  │  │
    │  │  │  │  │  ┌───┐  │  ┌───┐  │  ┌───┐  │         │  │  │  │
    │  │  │  │  │  │ 🎨│  │  │ ⚡│  │  │ 🔧│  │  icons  │  │  │  │
    │  │  │  │  │  └───┘  │  └───┘  │  └───┘  │         │  │  │  │
    │  │  │  │  │  Title  │  Title  │  Title  │         │  │  │  │
    │  │  │  │  │  Desc   │  Desc   │  Desc   │         │  │  │  │
    │  │  │  │  ├─────────┼─────────┼─────────┤         │  │  │  │
    │  │  │  │  │  Card   │  Card   │  Card   │         │  │  │  │
    │  │  │  │  └─────────┴─────────┴─────────┘         │  │  │  │
    │  │  │  └───────────────────────────────────────────┘  │  │  │
    │  │  │                                                 │  │  │
    │  │  └─────────────────────────────────────────────────┘  │  │
    │  └───────────────────────────────────────────────────────┘  │
    │                                                             │
    │  Props:                                                     │
    │    • title: string (requis) - Titre principal               │
    │    • subtitle: string - Sous-titre optionnel                │
    │    • features: Feature[] (requis) - Liste des features      │
    │    • cols: 2 | 3 | 4 (défaut: 3) - Colonnes desktop         │
    │                                                             │
    │  Interface Feature:                                         │
    │    { icon: string, title: string, description: string }     │
    │                                                             │
    │  Events: Aucun (présentation pure)                          │
    │                                                             │
    │  Slots: Aucun (données via props)                           │
    │                                                             │
    │  Responsive: sm=1col → md=2cols → lg=cols                   │
    └─────────────────────────────────────────────────────────────┘
  -->
<section class="py-16 bg-[var(--bg-subtle)]">
  <div class="layout-container">
    <!-- Header -->
    <div class="mb-12">
      <h2 class="heading mb-4">Why Choose Us</h2>
      <p class="text">We offer the best solutions</p>
    </div><!-- Features Grid -->
    <div class="layout-grid">
      <div class="card"><span class="card__icon">🚀</span><span class="card__title">Fast</span><span class="card__description">Lightning fast performance</span></div>
      <div class="card"><span class="card__icon">🔒</span><span class="card__title">Secure</span><span class="card__description">Enterprise-grade security</span></div>
      <div class="card"><span class="card__icon">📱</span><span class="card__title">Responsive</span><span class="card__description">Works on all devices</span></div>
    </div>
  </div>
</section>"
`;
